--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -361,7 +361,7 @@ button {
   color: var(--CC__color-danger);
 }
 
-@media (max-width: 640px) {
+@media (max-width: 968px) {
   .CC__stats-bar {
     flex-direction: column;
     align-items: stretch;
